# curve25519-dalek-lean-verify

./: .gitignore  .typos.toml  AENEAS_GUIDE.md  AGENTS.md  BOUNDS_COMPARISON_ANALYSIS.md  BOUNDS_COMPARISON_REMAINING_47.md  CONTRIBUTING.md  Cargo.toml  Curve25519Dalek.lean  DOCKER_IMAGE_TAG  DOCKER_TAG  Dockerfile  HOW_TO_CONTRIBUTE.md  LinterTest.lean  MWE.lean  MWE_legendre.lean  README.md  STREAMLINE_REMAINING.md  STYLE_GUIDE.md  Scratch.lean  TODO.md  Tests.lean  ToMathlib.lean  Utils.lean  aeneas-config.yml  aeneas-toolchain  aeneas-tweaks.txt  build.bash  build_docker_image.bash  celue  compare_lean_verus.py  compare_prompt.md  cursor_update_aeneas_for_mvcgen_integra.md  deps.json  extract-functions.txt  extract_52_functions.py  extract_common_verified.py  extraction_notes.md  functions.json  issue.md  (+27 more)
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS
.verilib/: aeneas.json  atoms.json  config.json  proofs.json  specs.json  stubs.json  summary.md
AristotlePrompts/: 20326_Mul.txt
Cli/: Analysis.lean  Deps.lean  Json.lean
Curve25519Dalek/: Aux.lean  Aux_aristotle.lean  Defs.lean  Ed25519.lean  Ed25519_v2.lean  ExternallyVerified.lean  Funs.lean  FunsExternal.lean  (+8 more)
ai-benchmark/: DOCKER_IMAGE_TAG  Dockerfile  LICENSE  README.md  bundle_log.bash  pyproject.toml
ai-benchmark/src/dalek_lean_ai/: __init__.py  dataset.py  lean_agent_prompt.txt  remove_proofs.py  run_eval.py  scorer.py  square_internal_tutorial.md
ai-benchmark/tests/: expected.lean  expected2.lean  input.lean  input2.lean  test_remove_proofs.py
(+550 files in other folders)
