[project]
name = "template-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "inspect-ai>=0.3.144",
    "openai>=2.7.1",
]

[tool.ruff.lint]
ignore = ["F722"]
extend-select = ["I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
